# Photorealism2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  calc.md  setup.sh
app/: CMakeLists.txt
app/src/: gui.cpp  gui.h  io.cpp  io.h  main.cpp  render.cpp  render.h  tonemapping.h
docs/: spectral_rendering.md
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
lib/: CMakeLists.txt
lib/prl2/: CMakeLists.txt
lib/prl2/ext/: CMakeLists.txt
lib/prl2/ext/HosekWilkie/: CMakeLists.txt
lib/prl2/include/: prl2.h
lib/prl2/src/: CMakeLists.txt
lib/prl2/src/camera/: CMakeLists.txt  camera.cpp  camera.h  environment.cpp  environment.h  film.cpp  film.h  pinhole.cpp  pinhole.h  thin-lens.cpp  thin-lens.h
lib/prl2/src/core/: CMakeLists.txt  bounds3.h  constant.h  geometry.h  isect.h  mat4.h  primitive.cpp  primitive.h  ray.h  spectrum.cpp  spectrum.h  transform.h  util.h  vec2.h  vec3.h  vec4.h
lib/prl2/src/integrator/: CMakeLists.txt  ao.cpp  ao.h  integrator.cpp  integrator.h  nee.cpp  nee.h  pt.cpp  pt.h
lib/prl2/src/intersector/: CMakeLists.txt  embree.cpp  embree.h  intersector.h  linear.h
lib/prl2/src/io/: CMakeLists.txt  io.cpp  io.h
lib/prl2/src/light/: CMakeLists.txt  area-light.cpp  area-light.h  light.cpp  light.h
lib/prl2/src/material/: CMakeLists.txt  diffuse.cpp  diffuse.h  glass.cpp  glass.h  material.h  mirror.cpp  mirror.h  surface_interaction.h
lib/prl2/src/parallel/: CMakeLists.txt  parallel.cpp  parallel.h
lib/prl2/src/postprocess/: CMakeLists.txt  tone_mapping.h
lib/prl2/src/renderer/: CMakeLists.txt  render-config.h  render-layer.cpp  render-layer.h  render_config.h  render_layer.cpp  render_layer.h  renderer.cpp  renderer.h  scene-loader.cpp  scene-loader.h  scene.cpp  scene.h  scene_loader.h
lib/prl2/src/sampler/: CMakeLists.txt  random.h  rng.h  sampler.h  sampling.h
lib/prl2/src/shape/: CMakeLists.txt  plane.cpp  plane.h  shape.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
lib/prl2/src/sky/: CMakeLists.txt  hosek_sky.cpp  hosek_sky.h  ibl_sky.cpp  ibl_sky.h  sky.h  uniform_sky.h
lib/prl2/src/texture/: texture.h
prl2/: CMakeLists.txt  main.cpp
prl2/include/: prl2.h
prl2/src/: CMakeLists.txt
prl2/src/camera/: camera.h  film.h  pinhole.cpp  pinhole.h
prl2/src/core/: CMakeLists.txt  constant.h  film.cpp  isect.h  mat4.h  primitive.h  ray.h  scene.h  spectrum.cpp  spectrum.h  transform.h  util.h  vec2.h  vec3.h  vec4.h
prl2/src/integrator/: CMakeLists.txt  integrator.h  pt.cpp  pt.h
prl2/src/intersector/: CMakeLists.txt  intersector.h  linear.h
prl2/src/material/: CMakeLists.txt  diffuse.h  material.h  surface_interaction.h
prl2/src/renderer/: CMakeLists.txt  render_config.h  render_layer.h  renderer.cpp  renderer.h  scene.h  scene_graph.cpp  scene_graph.h  scene_loader.cpp  scene_loader.h
prl2/src/sampler/: CMakeLists.txt  random.h  rng.h  sampler.h
prl2/src/shape/: CMakeLists.txt  sphere.cpp
prl2/src/texture/: CMakeLists.txt
prl2/tests/: draw_spectrum.cpp  draw_sphere.cpp  intersect_sphere.cpp  linear_intersector.cpp  test_spectrum.cpp
src/: film.cpp  film.h  gui.h  isect.h  main.cpp  mat4.h  matrix4.h  prl2.h  radiance.h  ray.h  rgb.h  shape.h  spectrum.cpp  spectrum.h  transform.h  type.h  vec2.h  vec3.h  vec4.h
src/shape/: shape.h  sphere.cpp  sphere.h
tests/: CMakeLists.txt  draw_diffuse.cpp  draw_normal.cpp  draw_spectrum.cpp  draw_sphere.cpp  intersect_sphere.cpp  linear_intersector.cpp  random_test.cpp  refract_test.cpp  renderer_test.cpp  shadow_test.cpp  test_parallel.cpp  test_spectrum.cpp  test_spherical.cpp  vec3_test.cpp
