add_subdirectory(camera)
add_subdirectory(core)
add_subdirectory(integrator)
add_subdirectory(intersector)
add_subdirectory(io)
add_subdirectory(light)
add_subdirectory(material)
add_subdirectory(parallel)
add_subdirectory(postprocess)
add_subdirectory(renderer)
add_subdirectory(sampler)
add_subdirectory(shape)
add_subdirectory(sky)
add_subdirectory(texture)